# IKEGAI

./: .dockerignore  .gitignore  README.MD  celery_queue.py  docker-compose.yaml  docker-compose_Composite.yaml  docker-compose_DEV.yaml  docker-compose_backup.yaml  docker-compose_tobe_updated.yaml  dockerfile  forecast_agent.py  main.py  multiAgentFlow.ipynb  pyproject.toml  register_tool.py  requirements.txt  tutorial_agents.py  tutorial_crew.py  tutorial_crew_agent.py
app/: .gitignore  README.MD  celery_queue.py  forecast_agent.py  multiAgentFlow.ipynb  pyproject.toml  register_tool.py  requirements.txt
app/AgentExecutor/: README.md  agent_router.py
app/AgentExecutor/schema/: agent_schema.py
app/AgentExecutor/src/: agents.py  crew.py
app/AgentExecutor/utils/: helper.py  sessions.py
app/DataIngestion/: data_ingestion_router.py
app/DataIngestion/schema/: adv_rag_schemas.py
app/DataIngestion/utils/: advanced_rag_utils.py  model_utils.py  mongo_utils.py  pdf_utils.py  url_utils.py
app/EvaluationMetrics/: metric_info.py
app/EvaluationMetrics/api/: evaluate_router.py
app/EvaluationMetrics/controllers/: evaluate_llm.py
app/EvaluationMetrics/schemas/: evaluation_schema.py
app/Tools/: README.MD
app/Tools/schema/: adv_ensemble_rag_schema.py  advanced_rag_schema.py  extractor_schema.py  forecasting_schema.py  scrapper_schema.py  text_to_sql_schema.py
app/Tools/src/: tool_utils.py
app/Tools/src/adv_ensemble_rag/: adv_ensemble_rag_tools.py  adv_ensemble_rag_utils.py
app/Tools/src/community_tools/: com_tool.py
app/Tools/utils/: model_helper.py
app/_temp/: config.py  configManager.json  configManager_for_advance_rag.json  configManager_for_forecasting.json  testconfig.json  zeroShotFewShotExamples.json
app/database/: meta_data.txt
app/example/: ExampleRunForAgent.ipynb
app/utils/: APIconnector.py  create_db.py  llmops.py  parser.py
ghorai/: .gitignore  README.md  configManager.json  extractor_schema.py  extractor_tools.py  extractor_utils.py  forecast_agent.py  forecasting_schema.py  forecasting_tools.py  forecasting_utils.py  main.py  pyproject.toml  sql_tools.py  sql_utils.py  text_to_sql_schema.py  tutorial_crew_agent.py
(+65 files in other folders)
