[tool.poetry]
name = "ikegai"
version = "0.1.0"
description = "A GenAi platform for Agent Tool execution"
authors = ["indresh <indreshb@kpmg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
chromadb = "^0.4.24"
langchain-openai = "^0.1.0"
sentence-transformers = "^2.5.1"
duckduckgo-search = "^5.2.2"
mediawikiapi = "^1.2"
wikibase-rest-api-client = "^0.1.3"
wikipedia = "^1.4.0"
yfinance = "^0.2.37"
arxiv = "^2.1.0"
youtube-search = "^2.1.2"
stackapi = "^0.3.0"
langchain-experimental = "0.0.50"
celery = "^5.3.6"
redis = "^5.0.3"
pymongo = "^4.6.3"
pymupdf = "^1.24.1"
azure-ai-formrecognizer = "^3.3.3"
python-multipart = "^0.0.9"
sqlmodel = "^0.0.16"
prophet = "^1.1.5"
plotly = "^5.20.0"
faiss-cpu = "^1.8.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
