[tool.poetry]
name = "ikegai"
version = "0.1.0"
description = "A GenAi platform for Agent Tool execution"
authors = ["indresh <indreshb@kpmg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
chromadb = "^0.4.24"
langchain-openai = "^0.1.0"
sentence-transformers = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
